--- a/Victorias secret/fade-small.html
+++ b/Victorias secret/fade-small.html
@@ -230,7 +230,7 @@
         .fadesmall #logo {
             
             height:35px;
-            margin-top:5px; 
+            margin-top:-8px; 
             margin-left:220px;
 
         }
@@ -242,7 +242,7 @@
             margin-left: 12px;
             display:inline;
             float:left;
-            margin-top:-30px;
+            margin-top:-35px;
             
         }
 
@@ -277,7 +277,7 @@
 
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
         <div class="cta"> <a href="https://goo.gl/maps/iVB569UEMj22" target="_blank">
-    <img src="https://i.imgur.com/vYvlKcd.png" style="height: 40px;"></a></div>   
+    <img src="https://i.imgur.com/xxS09E6.png" style="height: 40px;"></a></div>   
 
         <a href="http://www.victoriassecret.mx/storeLocator.php" target="_blank">
             <div class="carousel-container">
@@ -286,8 +286,8 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold"> ¡Tu bra favorito en la talla correcta! <br>  </span>
-                <span class="bzm_text_small" style="color: #eb99b0"> 2 POR $1,399. por tiempo limitado. </span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold"> ¡Tu bra favorito en la talla correcta!<br>2 POR $1,399. <br>  </span>
+                <span class="bzm_text_small" style="color: #eb99b0">  Por tiempo limitado. </span></div>
 
             <!-- LOGO -->
             <div class="logo"> <img id="logo" src="https://i.imgur.com/4W22b7q.png"></div>
