--- a/Victorias secret/Venetian.html
+++ b/Victorias secret/Venetian.html
@@ -2169,15 +2169,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(95px, 410px) rotate(0deg);
         transform: translate(0, 0) translate(95px, 410px) rotate(0deg);
 }
-/*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: BentonSans; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 74px;
-        -ms-transform: translate(0, 0) translate(0px, 267px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 267px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 267px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 267px) rotate(0deg);
-}
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 90px; height: 34px;
         -ms-transform: translate(0, 0) translate(231px, 447px) rotate(0deg);
@@ -2243,15 +2234,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
-/*#/#*//*#i77.text.css:text/base/css*/
-#i77 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: BentonSans; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i77.i78.positioning.css:positioning/base/css.2*/
-#i77 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 249px; height: 21px;
-        -ms-transform: translate(0, 0) translate(36px, 336px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(36px, 336px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(36px, 336px) rotate(0deg);
-        transform: translate(0, 0) translate(36px, 336px) rotate(0deg);
-}
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i68.shape.css:shape/base/css*/
@@ -2301,15 +2283,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(66px, 453px) rotate(0deg);
         transform: translate(0, 0) translate(66px, 453px) rotate(0deg);
 }
-/*#/#*//*#i97.text.css:text/base/css*/
-#i97 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: BentonSans; font-size: 18px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i97.i98.positioning.css:positioning/base/css.2*/
-#i97 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 249px; height: 22px;
-        -ms-transform: translate(0, 0) translate(36px, 313px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(36px, 313px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(36px, 313px) rotate(0deg);
-        transform: translate(0, 0) translate(36px, 313px) rotate(0deg);
-}
 /*#/#*//*#i99.font-local.css:font/font-local/css*/
 /*#i99.i100.font-local.css:font-local/css.1*/
 @font-face {
@@ -2322,6 +2295,15 @@ url('fonts/') format('opentype'),
 url('fonts/') format('svg');
 }
 /*#/#*/
+/*#/#*//*#i101.image.css:image/base/css*/
+#i101 { opacity: 1; }
+/*#/#*//*#i101.i102.positioning.css:positioning/base/css.2*/
+#i101 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 321px; height: 83px;
+        -ms-transform: translate(0, 0) translate(0px, 265px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 265px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 265px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 265px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2342,10 +2324,6 @@ url('fonts/') format('svg');
 <img id="i44" src="https://i.imgur.com/xT6jVUu.jpg"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/vYvlKcd.png"/>
-<!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">Bras sin aros, con detalles cool, colores vibrantes, y confort absoluto.</div>
-<!--#/#--><!--#i77.text.html:text/html-->
-<div id="i77">¡Disponibles en Antara Fashion Hall!</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/4W22b7q.png"/>
 <!--#/#--><!--#i68.shape.html:shape/html-->
@@ -2358,10 +2336,9 @@ url('fonts/') format('svg');
 <img id="i81" src="https://i.imgur.com/ObtrzfY.png"/>
 <!--#/#--><!--#i83.image.html:image/html-->
 <img id="i83" src="https://i.imgur.com/YN2Vf5g.png"/>
-<!--#/#--><!--#i97.text.html:text/html-->
-<div id="i97">2 bras sólo por 1,999 Pesos.</div>
 <!--#/#--><!--#i99.font.html:font/html-->
-<!--#/#--><!--#i101.font.html:font/html-->
+<!--#/#--><!--#i101.image.html:image/html-->
+<img id="i101" src="https://i.imgur.com/8zzIiqh.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2418,8 +2395,6 @@ bmShow('i44');
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
 bmShow('i46');
-/*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
-bmShow('i63');
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2439,13 +2414,13 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
-/*#/#*//*#i68.i87.actions.js:actions/base/js.1*/
+/*#/#*//*#i68.i103.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
-    /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i103.i104.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.victoriassecret.mx/storeLocator.php'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2454,12 +2429,12 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i73.i74.positioning.js:positioning/base/js.2*/
 bmShow('i73');
-/*#/#*//*#i73.i85.actions.js:actions/base/js.1*/
+/*#/#*//*#i73.i105.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i73');
 
 el.addEventListener('click', function(e){
-    /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i105.i106.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -2467,19 +2442,17 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i77.i78.positioning.js:positioning/base/js.2*/
-bmShow('i77');
 /*#/#*//*#i79.image.js:image/base/js*/
 
 /*#/#*//*#i79.i80.positioning.js:positioning/base/js.2*/
 bmShow('i79');
-/*#/#*//*#i79.i91.actions.js:actions/base/js.1*/
+/*#/#*//*#i79.i107.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i79');
 
 el.addEventListener('click', function(e){
-    /*#i91.i92.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=%20http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i107.i108.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u= http://www.victoriassecret.mx/storeLocator.php'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2490,13 +2463,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i81.i82.positioning.js:positioning/base/js.2*/
 bmShow('i81');
-/*#/#*//*#i81.i93.actions.js:actions/base/js.1*/
+/*#/#*//*#i81.i109.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
-    /*#i93.i94.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i109.i110.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado http://www.victoriassecret.mx/storeLocator.php'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2507,21 +2480,23 @@ if ('click' === 'click') {
 
 /*#/#*//*#i83.i84.positioning.js:positioning/base/js.2*/
 bmShow('i83');
-/*#/#*//*#i83.i95.actions.js:actions/base/js.1*/
+/*#/#*//*#i83.i111.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i83');
 
 el.addEventListener('click', function(e){
-    /*#i95.i96.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status= http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i111.i112.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=http://www.victoriassecret.mx/storeLocator.php'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i97.i98.positioning.js:positioning/base/js.2*/
-bmShow('i97');
+/*#/#*//*#i101.image.js:image/base/js*/
+
+/*#/#*//*#i101.i102.positioning.js:positioning/base/js.2*/
+bmShow('i101');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2560,14 +2535,6 @@ name: ThkenRu.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i63.text.meta:text/meta*/
-name: Bras sin aros, con detalles cool, colores vibrantes, y confort absoluto.; customName: false;
-/*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i77.text.meta:text/meta*/
-name: ¡Estamos en Antara Fashion Hall con promociones increíbles!; customName: false;
-/*#/#*//*#i77.i78.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
 name: 4W22b7q.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
@@ -2596,12 +2563,11 @@ name: YN2Vf5g.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i83.i84.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i97.text.meta:text/meta*/
-name: 2 bras sólo por 1,999 Pesos.; customName: false;
-/*#/#*//*#i97.i98.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i99.font.meta:font/meta*/
 name: Web Font: BentonSans; type: font-local; customName: ;
-/*#/#*//*#i101.font.meta:font/meta*/
-name: Font 1; type: ; customName: ;
+/*#/#*//*#i101.image.meta:image/meta*/
+name: 8zzIiqh.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i101.i102.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
