--- a/Victorias secret/fade-small.html
+++ b/Victorias secret/fade-small.html
@@ -287,7 +287,7 @@
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
             <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold"> ¡Tu bra favorito en la talla correcta!<br>2 POR $1,399. <br>  </span>
-                <span class="bzm_text_small" style="color: #eb99b0">  Por tiempo limitado. </span></div>
+                <span class="bzm_text_small" style="color: #eb99b0">  *Por tiempo limitado. </span></div>
 
             <!-- LOGO -->
             <div class="logo"> <img id="logo" src="https://i.imgur.com/4W22b7q.png"></div>
