--- a/Victorias secret/Venetian.html
+++ b/Victorias secret/Venetian.html
@@ -2420,7 +2420,7 @@ var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
     /*#i103.i104.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.victoriassecret.mx/storeLocator.php'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.victoriassecret.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2435,7 +2435,7 @@ var el = document.getElementById('i73');
 
 el.addEventListener('click', function(e){
     /*#i105.i106.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'http://www.victoriassecret.mx/storeLocator.php'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
