--- a/Victorias secret/fade-completo2.html
+++ b/Victorias secret/fade-completo2.html
@@ -356,8 +356,8 @@
        <div class="te-container">
 
     
-  <div class="cta"> <a href=" http://www.victoriassecret.mx" target="_blank">
-    <img src="https://i.imgur.com/vYvlKcd.png" style="height: 35px;"></a></div>   
+  <div class="cta">
+    <img src="https://i.imgur.com/vYvlKcd.png" style="height: 35px;"></div>   
   
      
   
