--- a/Victorias secret/fade-small.html
+++ b/Victorias secret/fade-small.html
@@ -276,10 +276,10 @@
    <div class="bzm_wrapper carousel-wrapper size_300x250">
 
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
-        <div class="cta"> <a href="https://goo.gl/maps/iVB569UEMj22" target="_blank">
-    <img src="https://i.imgur.com/xxS09E6.png" style="height: 40px;"></a></div>   
+        <div class="cta"> <a href="http://www.victoriassecret.mx/storeLocator.php" target="_blank">
+    <img src="https://i.imgur.com/vYvlKcd.png" style="height: 40px;"></a></div>   
 
-        <a href="http://www.victoriassecret.mx/storeLocator.php" target="_blank">
+        <a href="http://www.victoriassecret.mx/" target="_blank">
             <div class="carousel-container">
                 <!-- ESTAS SE COLOCAN EN EL CSS -->
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
