--- a/McDonald/Cube.html
+++ b/McDonald/Cube.html
@@ -907,7 +907,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">La mejor crema helada sabor vainilla mezclada con deliciosos trozos de Kitkat.</div>
+<div id="i14">La mejor crema helada sabor a vainilla, mezclada con deliciosos trozos de Kitkat.</div>
 <!--#/#--><!--#i4.i236.image.html:image/html-->
 <img id="i236" src="https://i.imgur.com/Em9uyfD.png"/>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
