--- a/McDonald/hover-text-big3.html
+++ b/McDonald/hover-text-big3.html
@@ -13,25 +13,18 @@
 </head>
     <style>
 
- body {
+    body {
     margin: 0;
     padding: 0;
     font-family: Source Sans Pro;
 }
-.imgBx:before{
-    content: "";
-    width: 298px;
-    height: 598px;
-    position: absolute;
-}
-
 .card {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 298px;
-    height: 598px;
+    width: 300px;
+    height: 600px;
     background: none;
     overflow: hidden;
     cursor: pointer;
@@ -109,14 +102,14 @@
             <div id="ghost"></div>
 
             <div class="imgBx">
-               <!--PRIMERA CARA (LANDING1)--> 
-                <iframe  src="fade-completo.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
+                
+                <img src="https://i.imgur.com/BlhVLMw.gif">
             </div>
 
-            <!--SEGUNDA CARA (LANDING2)--> 
+
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/eY9QrDHjfZT2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/U62ToMn.png"> </a></div>
+                <a href="https://goo.gl/maps/eY9QrDHjfZT2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/lutF7EU.jpg"> </a></div>
 
              
 
