--- a/McDonald/Cube.html
+++ b/McDonald/Cube.html
@@ -933,7 +933,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i240.image.html:image/html-->
 <img id="i240" src="https://i.imgur.com/Em9uyfD.png"/>
 <!--#/#--><!--#i5.i194.text.html:text/html-->
-<div id="i194">¿Un MacFlurry con KitKat?</div>
+<div id="i194">¿Un McFlurry con KitKat?</div>
 <!--#/#--><!--#i5.i244.image.html:image/html-->
 <img id="i244" src="https://i.imgur.com/x483UDT.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
