--- a/McDonald/ZoomExp300x600.html
+++ b/McDonald/ZoomExp300x600.html
@@ -178,7 +178,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:26px;  text-decoration: none;">¿Un MacFlurry con KitKat?</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:26px;  text-decoration: none;">¿Un McFlurry con KitKat?</span><br>
 
                    
                    </div>
