--- a/Charly/Fade.html
+++ b/Charly/Fade.html
@@ -91,7 +91,7 @@
             z-index: 5;
             margin-left: 30%;
             left: px;
-            background-color: #f25822;
+            background-color: #de6712;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
