--- a/Oster/ZoomExp300x600.html
+++ b/Oster/ZoomExp300x600.html
@@ -186,7 +186,7 @@ a {text-decoration: none;}
  <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:16px;  text-decoration: none;">¿Quieres ganar una cafetera o un horno? Desde el 1 de Marzo al 15 de Mayo, ¡gana con Oster! </span><br>
 
             
-                  <div style="font-family:Arial; color:#000000; font-size:8px;text-align:center;margin-top:30px;">Aviso PROFECO 000247-2019</div>  
+                 <!-- <div style="font-family:Arial; color:#000000; font-size:8px;text-align:center;margin-top:30px;">Aviso PROFECO 000247-2019</div>  -->
                   
                    </div>
                      <div style=";height:40px;text-align:right ;margin-top:-30px; margin-right: 10px;"> <img src="https://i.imgur.com/h23KF8O.png" style="height:35px; text-decoration: none;">
