--- a/Cloret/Cube.html
+++ b/Cloret/Cube.html
@@ -1047,7 +1047,7 @@ var el = document.getElementById('i262');
 
 el.addEventListener('click', function(e){
     /*#i276.i277.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.oster.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira cómo refrescar tu aliento https://www.facebook.com/pg/CloretsMx/posts/?ref=page_internal'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1126,7 +1126,7 @@ var el = document.getElementById('i216');
 
 el.addEventListener('click', function(e){
     /*#i284.i285.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.oster.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira cómo refrescar tu aliento https://www.facebook.com/pg/CloretsMx/posts/?ref=page_internal'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1205,7 +1205,7 @@ var el = document.getElementById('i258');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.oster.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira cómo refrescar tu aliento https://www.facebook.com/pg/CloretsMx/posts/?ref=page_internal'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
