--- a/Cloret/Cube.html
+++ b/Cloret/Cube.html
@@ -905,7 +905,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¿Sabías que Cloret lleva más de 50 años refrescando el aliento?</div>
+<div id="i14">¿Sabías que Clorets lleva más de 50 años refrescando el aliento?</div>
 <!--#/#--><!--#i4.i236.image.html:image/html-->
 <img id="i236" src="https://i.imgur.com/wieNflp.png"/>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
