--- a/Oster/Cube3.html
+++ b/Oster/Cube3.html
@@ -660,7 +660,7 @@ var el = document.getElementById('i170');
 
 el.addEventListener('click', function(e){
     /*#i192.i193.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatasapp.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! http://www.osterpromocion.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -755,7 +755,7 @@ var el = document.getElementById('i166');
 
 el.addEventListener('click', function(e){
     /*#i180.i181.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatasapp.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! http://www.osterpromocion.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -867,7 +867,7 @@ var el = document.getElementById('i158');
 
 el.addEventListener('click', function(e){
     /*#i198.i199.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatasapp.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! http://www.osterpromocion.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
