--- a/Office Depot Intel/FijoPeq2.html
+++ b/Office Depot Intel/FijoPeq2.html
@@ -99,7 +99,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/OLoWlFY.jpg");
+            background: url("https://i.imgur.com/14EWRRZ.png");
             background-size: cover;
         }
 
