--- a/Office Depot Intel/FijoCompleto1.html
+++ b/Office Depot Intel/FijoCompleto1.html
@@ -99,7 +99,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/jhp4QXV.jpg");
+            background: url("https://i.imgur.com/avwNmcs.png");
             background-size: cover;
         }
 
