--- a/UVM/Cube2.html
+++ b/UVM/Cube2.html
@@ -1007,7 +1007,7 @@ var el = document.getElementById('i190');
 
 el.addEventListener('click', function(e){
     /*#i284.i285.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/F7TFG65sYzE2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que encontré! https://goo.gl/maps/F7TFG65sYzE2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1097,7 +1097,7 @@ var el = document.getElementById('i244');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/F7TFG65sYzE2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que encontré! https://goo.gl/maps/F7TFG65sYzE2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
