--- a/RIU GRAN CANARIA/ZoomExp300x600.html
+++ b/RIU GRAN CANARIA/ZoomExp300x600.html
@@ -158,7 +158,7 @@ a {text-decoration: none;}
 
 </head>
 <body class="zoom" style="margin:0px;">
-  <a href="http://www.osterpromocion.com.mx/" target="_blank">
+  <a href="https://www.riu.com/en/hotel/spain/gran-canaria/index.jsp?utm_medium=display&utm_source=Xaxis&utm_campaign=LPA&utm_content=120x600#" target="_blank">
  	 <div class="wrapper size_300x250">
        
      
