--- a/RIU CANCUN/fade-small.html
+++ b/RIU CANCUN/fade-small.html
@@ -274,7 +274,8 @@
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
         
 
-        <a href="https://www.riu.com/en/hotel/mexico/cancun/index.jsp?utm_medium=display&utm_source=Xaxis&utm_campaign=CUN&utm_content=120x600">
+        <a href="https://www.riu.com/en/hotel/mexico/cancun/index.jsp?utm_medium=display&utm_source=Xaxis&utm_campaign=CUN&utm_content=120x600" target="_blank">
+            <div class="carousel-container">
                 <!-- ESTAS SE COLOCAN EN EL CSS -->
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
