--- a/RIU TENERIFE/ZoomExp300x600.html
+++ b/RIU TENERIFE/ZoomExp300x600.html
@@ -158,9 +158,9 @@ a {text-decoration: none;}
 
 </head>
 <body class="zoom" style="margin:0px;">
-  <a href="https://www.riu.com/en/hotel/mexico/cancun/index.jsp?utm_medium=display&utm_source=Xaxis&utm_campaign=CUN&utm_content=120x600" target="_blank">
+ 
  	 <div class="wrapper size_300x250">
-       
+    <a href=" https://www.riu.com/en/hotel/spain/tenerife/index.jsp?utm_medium=display&utm_source=Xaxis&utm_campaign=TFS&utm_content=120x600" target="_blank">    
      
 
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 460px; border-radius: none;">
