--- a/RIU TENERIFE/fade-small.html
+++ b/RIU TENERIFE/fade-small.html
@@ -274,7 +274,7 @@
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
         
 
-        <a href="https://www.riu.com/en/hotel/mexico/cancun/index.jsp?utm_medium=display&utm_source=Xaxis&utm_campaign=CUN&utm_content=120x600" target="_blank">
+        <a href=" https://www.riu.com/en/hotel/spain/tenerife/index.jsp?utm_medium=display&utm_source=Xaxis&utm_campaign=TFS&utm_content=120x600" target="_blank">
             <div class="carousel-container">
                 <!-- ESTAS SE COLOCAN EN EL CSS -->
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
