--- a/RIU TENERIFE/fade-small.html
+++ b/RIU TENERIFE/fade-small.html
@@ -71,15 +71,15 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/hAtF4Gu.jpg)
+            background-image: url(https://i.imgur.com/XEJQMOV.jpg)
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/52hT9fe.jpg)
+            background-image: url(https://i.imgur.com/HJdwZZC.jpg)
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/8E3F9Nx.jpg)
+            background-image: url(https://i.imgur.com/V1FBURR.jpg)
         }
 
         .fadesmall .bzm_cover.bzm_pos_tl {
