--- a/Oster/Cube3.html
+++ b/Oster/Cube3.html
@@ -225,6 +225,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .expanding-collapsed > #i4 {
     overflow: visible;
 }
+/*#/#*//*#i8.i76.text.css:text/base/css*/
+#i76 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i76.i77.positioning.css:positioning/base/css.2*/
+#i76 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 248px; height: 57px;
+        -ms-transform: translate(0, 0) translate(26px, 196px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(26px, 196px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(26px, 196px) rotate(0deg);
+        transform: translate(0, 0) translate(26px, 196px) rotate(0deg);
+}
 /*#/#*//*#i8.i9.shape.css:shape/base/css*/
 #i9 { background-color: #ffffff; opacity: 1;
 }
@@ -238,54 +247,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i8.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
 /*#/#*//*#i60.i61.positioning.css:positioning/base/css.2*/
-#i60 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 180px;
+#i60 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 250px;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i8.i76.text.css:text/base/css*/
-#i76 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i76.i77.positioning.css:positioning/base/css.2*/
-#i76 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 248px; height: 57px;
-        -ms-transform: translate(0, 0) translate(26px, 196px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(26px, 196px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(26px, 196px) rotate(0deg);
-        transform: translate(0, 0) translate(26px, 196px) rotate(0deg);
 }
 /*#/#*//*#i8.i102.shape.css:shape/base/css*/
 #i102 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i102.i103.positioning.css:positioning/base/css.2*/
 #i102 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i8.i208.image.css:image/base/css*/
-#i208 { opacity: 1; }
-/*#/#*//*#i208.i209.positioning.css:positioning/base/css.2*/
-#i208 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 144px; height: 26px;
-        -ms-transform: translate(0, 0) translate(78px, 166px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(78px, 166px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(78px, 166px) rotate(0deg);
-        transform: translate(0, 0) translate(78px, 166px) rotate(0deg);
-}
-/*#/#*//*#i30.i31.shape.css:shape/base/css*/
-#i31 { background-color: #ffffff; opacity: 1;
-}
-/*#/#*//*#i31.i32.positioning.css:positioning/base/css.2*/
-#i31 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i30.i204.image.css:image/base/css*/
-#i204 { opacity: 1; }
-/*#/#*//*#i204.i205.positioning.css:positioning/base/css.2*/
-#i204 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 180px;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
@@ -300,6 +272,25 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(59px, 198px) rotate(0deg);
         transform: translate(0, 0) translate(59px, 198px) rotate(0deg);
 }
+/*#/#*//*#i30.i31.shape.css:shape/base/css*/
+#i31 { background-color: #ffffff; opacity: 1;
+}
+/*#/#*//*#i31.i32.positioning.css:positioning/base/css.2*/
+#i31 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i30.i204.image.css:image/base/css*/
+#i204 { opacity: 1; }
+/*#/#*//*#i204.i205.positioning.css:positioning/base/css.2*/
+#i204 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 250px;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
 /*#/#*//*#i30.i98.shape.css:shape/base/css*/
 #i98 { background-color: #dedede; opacity: 0.00;
 }
@@ -309,15 +300,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i30.i206.image.css:image/base/css*/
-#i206 { opacity: 1; }
-/*#/#*//*#i206.i207.positioning.css:positioning/base/css.2*/
-#i206 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 144px; height: 26px;
-        -ms-transform: translate(0, 0) translate(78px, 166px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(78px, 166px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(78px, 166px) rotate(0deg);
-        transform: translate(0, 0) translate(78px, 166px) rotate(0deg);
 }
 /*#/#*//*#i41.i42.shape.css:shape/base/css*/
 #i42 { background-color: #ffffff; opacity: 1;
@@ -341,20 +323,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i41.i94.image.css:image/base/css*/
 #i94 { opacity: 1; }
 /*#/#*//*#i94.i95.positioning.css:positioning/base/css.2*/
-#i94 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 180px;
+#i94 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 250px;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i41.i210.image.css:image/base/css*/
-#i210 { opacity: 1; }
-/*#/#*//*#i210.i211.positioning.css:positioning/base/css.2*/
-#i210 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 144px; height: 26px;
-        -ms-transform: translate(0, 0) translate(78px, 166px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(78px, 166px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(78px, 166px) rotate(0deg);
-        transform: translate(0, 0) translate(78px, 166px) rotate(0deg);
 }
 /*#/#*//*#i41.i118.shape.css:shape/base/css*/
 #i118 { background-color: #dedede; opacity: 0.00;
@@ -395,32 +368,28 @@ url('fonts/') format('svg');
     <div class="adf-Shape">
         <!--#i4.i8.cube-panel.html:cube-panel/html.1-->
 <div id="i8" class="adf-Panel ">
-    <!--#i8.i9.shape.html:shape/html-->
-<div id="i9"></div>
-<!--#/#--><!--#i8.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/euV6tNg.png"/>
-<!--#/#--><!--#i8.i76.text.html:text/html-->
+    <!--#i8.i76.text.html:text/html-->
 <div id="i76">Hay increíbles premios como un auto, 
 una tarjeta con $150,000 pesos, electrodomésticos y tarjetas con $1,000 pesos al instante.</div>
+<!--#/#--><!--#i8.i9.shape.html:shape/html-->
+<div id="i9"></div>
+<!--#/#--><!--#i8.i60.image.html:image/html-->
+<img id="i60" src="https://i.imgur.com/vbLcbSm.png"/>
 <!--#/#--><!--#i8.i102.shape.html:shape/html-->
 <div id="i102"></div>
-<!--#/#--><!--#i8.i208.image.html:image/html-->
-<img id="i208" src="https://i.imgur.com/BIqq9ZG.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i30.cube-panel.html:cube-panel/html.1-->
 <div id="i30" class="adf-Panel ">
-    <!--#i30.i31.shape.html:shape/html-->
-<div id="i31"></div>
-<!--#/#--><!--#i30.i204.image.html:image/html-->
-<img id="i204" src="https://i.imgur.com/qrjPERE.png"/>
-<!--#/#--><!--#i30.i142.text.html:text/html-->
+    <!--#i30.i142.text.html:text/html-->
 <div id="i142">Mamá siempre gana. 
 ¡Y tú ganas con Oster!</div>
+<!--#/#--><!--#i30.i31.shape.html:shape/html-->
+<div id="i31"></div>
+<!--#/#--><!--#i30.i204.image.html:image/html-->
+<img id="i204" src="https://i.imgur.com/vDrOadr.png"/>
 <!--#/#--><!--#i30.i98.shape.html:shape/html-->
 <div id="i98"></div>
-<!--#/#--><!--#i30.i206.image.html:image/html-->
-<img id="i206" src="https://i.imgur.com/BIqq9ZG.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i41.cube-panel.html:cube-panel/html.1-->
@@ -430,9 +399,7 @@ una tarjeta con $150,000 pesos, electrodomésticos y tarjetas con $1,000 pesos a
 <!--#/#--><!--#i41.i80.text.html:text/html-->
 <div id="i80">Registra tu ticket de compra por $1,000 pesos.</div>
 <!--#/#--><!--#i41.i94.image.html:image/html-->
-<img id="i94" src="https://i.imgur.com/RXhQlWf.png"/>
-<!--#/#--><!--#i41.i210.image.html:image/html-->
-<img id="i210" src="https://i.imgur.com/BIqq9ZG.png"/>
+<img id="i94" src="https://i.imgur.com/kI2vSEF.png"/>
 <!--#/#--><!--#i41.i118.shape.html:shape/html-->
 <div id="i118"></div>
 <!--#/#-->
@@ -471,14 +438,14 @@ var cube_i4 = new Adform.FlexGallery({
 
 cube_i4.init();
 
+/*#/#*//*#i76.i77.positioning.js:positioning/base/js.2*/
+bmShow('i76');
 /*#/#*//*#i9.i10.positioning.js:positioning/base/js.2*/
 bmShow('i9');
 /*#/#*//*#i8.i60.image.js:image/base/js*/
 
 /*#/#*//*#i60.i61.positioning.js:positioning/base/js.2*/
 bmShow('i60');
-/*#/#*//*#i76.i77.positioning.js:positioning/base/js.2*/
-bmShow('i76');
 /*#/#*//*#i102.i103.positioning.js:positioning/base/js.2*/
 bmShow('i102');
 /*#/#*//*#i102.i104.actions.js:actions/base/js.1*/
@@ -494,10 +461,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i8.i208.image.js:image/base/js*/
-
-/*#/#*//*#i208.i209.positioning.js:positioning/base/js.2*/
-bmShow('i208');
 /*#/#*//*#i8.i52.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i8');
@@ -511,14 +474,14 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i142.i143.positioning.js:positioning/base/js.2*/
+bmShow('i142');
 /*#/#*//*#i31.i32.positioning.js:positioning/base/js.2*/
 bmShow('i31');
 /*#/#*//*#i30.i204.image.js:image/base/js*/
 
 /*#/#*//*#i204.i205.positioning.js:positioning/base/js.2*/
 bmShow('i204');
-/*#/#*//*#i142.i143.positioning.js:positioning/base/js.2*/
-bmShow('i142');
 /*#/#*//*#i98.i99.positioning.js:positioning/base/js.2*/
 bmShow('i98');
 /*#/#*//*#i98.i100.actions.js:actions/base/js.1*/
@@ -534,10 +497,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i30.i206.image.js:image/base/js*/
-
-/*#/#*//*#i206.i207.positioning.js:positioning/base/js.2*/
-bmShow('i206');
 /*#/#*//*#i30.i56.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i30');
@@ -574,10 +533,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i41.i210.image.js:image/base/js*/
-
-/*#/#*//*#i210.i211.positioning.js:positioning/base/js.2*/
-bmShow('i210');
 /*#/#*//*#i41.i58.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i41');
@@ -615,52 +570,42 @@ customName: 1;
 data: /*!*/{"mode":"advanced"}/*!*/;
 /*#/#*//*#i4.i8.cube-panel.meta:cube-panel/meta.1*/
     name: Cube Panel 1;
+/*#/#*//*#i8.i76.text.meta:text/meta*/
+name: Hay increíbles premios como un auto,  una tarjeta con $150,000 pesos, electrodomésticos y tarjetas con $1,000 pesos al instante.; customName: false;
+/*#/#*//*#i76.i77.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i8.i9.shape.meta:shape/meta*/
 name: Background;
 /*#/#*//*#i9.i10.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i8.i60.image.meta:image/meta*/
-name: euV6tNg.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: vbLcbSm.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i8.i76.text.meta:text/meta*/
-name: Hay increíbles premios como un auto,  una tarjeta con $150,000 pesos, electrodomésticos y tarjetas con $1,000 pesos al instante.; customName: false;
-/*#/#*//*#i76.i77.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i8.i102.shape.meta:shape/meta*/
 name: Shape 1;
 /*#/#*//*#i102.i103.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i8.i208.image.meta:image/meta*/
-name: BIqq9ZG.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i208.i209.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i30.cube-panel.meta:cube-panel/meta.1*/
     name: Cube Panel 3;
+/*#/#*//*#i30.i142.text.meta:text/meta*/
+name: Mamá siempre gana.  ¡Y tu ganas con Oster!; customName: false;
+/*#/#*//*#i142.i143.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i30.i31.shape.meta:shape/meta*/
 name: Background;
 /*#/#*//*#i31.i32.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i30.i204.image.meta:image/meta*/
-name: qrjPERE.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: vDrOadr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i204.i205.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i30.i142.text.meta:text/meta*/
-name: Mamá siempre gana.  ¡Y tu ganas con Oster!; customName: false;
-/*#/#*//*#i142.i143.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i30.i98.shape.meta:shape/meta*/
 name: Shape 1;
 /*#/#*//*#i98.i99.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i30.i206.image.meta:image/meta*/
-name: BIqq9ZG.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i206.i207.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i41.cube-panel.meta:cube-panel/meta.1*/
     name: Cube Panel 4;
 /*#/#*//*#i41.i42.shape.meta:shape/meta*/
@@ -672,14 +617,9 @@ name: Registra tu ticket de compra por $1,000 pesos.; customName: false;
 /*#/#*//*#i80.i81.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i41.i94.image.meta:image/meta*/
-name: RXhQlWf.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: kI2vSEF.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i94.i95.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i41.i210.image.meta:image/meta*/
-name: BIqq9ZG.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i210.i211.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i41.i118.shape.meta:shape/meta*/
 name: Shape 1;
