--- a/Oster/ZoomExp300x600.html
+++ b/Oster/ZoomExp300x600.html
@@ -57,7 +57,7 @@ a {text-decoration: none;}
      
 
         .zoom .ism_text {
-            margin-top: 40px;
+            margin-top: 35px;
             margin-left: 0px;
             text-align:center;
             padding-left: 4px;
@@ -69,7 +69,7 @@ a {text-decoration: none;}
             font-size: 18px;
             color: #000;
             width:95%;
-            font-weight: 600;
+            font-weight: 300;
             text-align: center;
         }
 
@@ -183,7 +183,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:18px;  text-decoration: none;">Mamá siempre gana, ¡y tú ganas con Oster! </span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:20px;  text-decoration: none;">Mamá siempre gana, <br> ¡y tú ganas con Oster! </span><br>
 
             
                   <div style="font-family:Arial; color:#000000; font-size:8px;text-align:center;margin-top:30px;">Aviso PROFECO 000247-2019</div>  
