--- a/Hoteles One/Venetian.html
+++ b/Hoteles One/Venetian.html
@@ -2294,7 +2294,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i39.text.html:text/html-->
 <div id="i39">#porquepuedo</div>
 <!--#/#--><!--#i41.text.html:text/html-->
-<div id="i41">Esta temporada elije el destino que más te guste ,viaja con quien quieras y vive al máximo tus experiencias. One está contigo.</div>
+<div id="i41">Esta temporada elije el destino que más te guste. Viaja con quien quieras y vive al máximo tus experiencias. One está contigo.</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
