--- a/Fiesta INN/ZoomExp300x600.html
+++ b/Fiesta INN/ZoomExp300x600.html
@@ -180,7 +180,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="font-family:Trebuchet MS; color:#000000; font-size:22px;  text-decoration: none;">Viajes, amigos, aventuras, experiencias.</span><br>
+ <div class="ism_text"> <span class=" ism_text_title" style="font-family:Trebuchet MS; color:#000000; font-size:22px;  text-decoration: none;">Seguridad, cómodidad, funcionalidad, espacio, bienestar. Elige tu destino a <b style="color:#d03037">#PreciosÚnicos</b> </span><br>
 
             
                  <!-- <div style="font-family:Arial; color:#000000; font-size:8px;text-align:center;margin-top:30px;">Aviso PROFECO 000247-2019</div>  -->
