--- a/Office Depot Intel/FijoCompleto1.html
+++ b/Office Depot Intel/FijoCompleto1.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'http://bit.ly/2JoFdX0';
+                adfClickTAGUrl = 'http://bit.ly/2CGLlUP';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
