--- a/Office Depot Intel/FijoPeq3.html
+++ b/Office Depot Intel/FijoPeq3.html
@@ -99,7 +99,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/Im0rz0Q.png");
+            background: url("https://i.imgur.com/ufJ7HIc.png");
             background-size: cover;
         }
 
