--- a/Office Depot Intel/FijoPeq1.html
+++ b/Office Depot Intel/FijoPeq1.html
@@ -99,7 +99,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/Im0rz0Q.png");
+            background: url("https://i.imgur.com/VTPY9cz.png");
             background-size: cover;
         }
 
