--- a/Office Depot Intel/FijoCompleto2.html
+++ b/Office Depot Intel/FijoCompleto2.html
@@ -99,7 +99,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/DZkEaaS.png");
+            background: url("https://i.imgur.com/epeZvM0.png");
             background-size: cover;
         }
 
