--- a/P.F. Changs/Venetian.html
+++ b/P.F. Changs/Venetian.html
@@ -2464,7 +2464,7 @@ var el = document.getElementById('i112');
 
 el.addEventListener('click', function(e){
     /*#i120.i121.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/5MCxDPGUQw82'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
