--- a/Suzuki/Venetian300x600.html
+++ b/Suzuki/Venetian300x600.html
@@ -2396,7 +2396,7 @@ var el = document.getElementById('i35');
 
 el.addEventListener('click', function(e){
     /*#i43.i44.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u= https://www.suzuki.com.pe/autos/modelos/city-cars/all-new-swift'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.suzuki.com.pe/autos/modelos/city-cars/all-new-swift'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2413,7 +2413,7 @@ var el = document.getElementById('i37');
 
 el.addEventListener('click', function(e){
     /*#i45.i46.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status= https://www.suzuki.com.pe/autos/modelos/city-cars/all-new-swift'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.suzuki.com.pe/autos/modelos/city-cars/all-new-swift'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2430,7 +2430,7 @@ var el = document.getElementById('i39');
 
 el.addEventListener('click', function(e){
     /*#i41.i42.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.suzuki.com.pe/autos/modelos/city-cars/all-new-swift'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
