--- a/Suzuki/Cube.html
+++ b/Suzuki/Cube.html
@@ -957,7 +957,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i306.image.html:image/html-->
 <img id="i306" src="https://i.imgur.com/4DQHA5P.png"/>
 <!--#/#--><!--#i6.i196.text.html:text/html-->
-<div id="i196">Seas quien seas, atrévete a mas con nuestra Swift renovada para recorrer la ciudad.</div>
+<div id="i196">Seas quien seas, atrévete a recorrer la ciudad con nuesra SWIFT renovada.</div>
 <!--#/#--><!--#i6.i336.image.html:image/html-->
 <img id="i336" src="https://i.imgur.com/IgGM4UZ.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
