--- a/Xcaret-VideoInteractivo/VideoInteractivo.html
+++ b/Xcaret-VideoInteractivo/VideoInteractivo.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Trebuchet MS:300,700,900" rel="stylesheet">
          <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>  -->
         <script>
-            var videoUrl = "https://www.youtube.com/embed/qp_BjbC8jTI?autohide=2&modestbranding=1&controls=2&showinfo=0&fs=0&rel=0&disablekb=1&cc_load_policy=0";
+            var videoUrl = "https://www.youtube.com/embed/fId5euU5lwE?autohide=2&modestbranding=1&controls=2&showinfo=0&fs=0&rel=0&disablekb=1&cc_load_policy=0";
             var config = [
                 {
                     start: 5,
@@ -22,8 +22,8 @@
                     detail: {//configuracion para el modal imagen, titulo, y texto de detail
                         imageUrl: 'https://i.imgur.com/BL2ue6I.png',
                         title: ' ',
-                        href: 'https://www.canadadry.com/#/root-of-relaxation',
-                        description: 'El trio de la tranquilidad.'
+                        href: 'https://www.xcaret.com/es/parques-y-tours/',
+                        description: '¡Haz de tu experiencia algo único con nuestros parques y tours!'
                     }
                 },{
                     start: 5,
@@ -35,8 +35,8 @@
                     detail: {
                         imageUrl: 'https://i.imgur.com/1Znu1IX.png',
                         title: ' ',
-                        href: 'https://www.canadadry.com/#/root-of-relaxation',
-                        description: '¿Eres una persona Ginger?'
+                        href: 'https://www.xcaret.com/es/parques-y-tours/',
+                        description: '¡Vive la experiencia Xcaret!'
                     }
                 },{
                     start: 15,
@@ -48,8 +48,8 @@
                     detail: {
                         imageUrl: 'https://i.imgur.com/wd0NIWc.png',
                         title: ' ',
-                        href: 'https://www.canadadry.com/#/root-of-relaxation',
-                        description: 'Cambiar sabe bien.'
+                        href: 'https://www.xcaret.com/es/parques-y-tours/',
+                        description: 'Diversión, naturaleza y cultura para toda la familia.'
                     }
                 },{
                     start: 15,
@@ -61,8 +61,8 @@
                     detail: {
                         imageUrl: 'https://i.imgur.com/VUcXaOL.png',
                         title: ' ',
-                        href: 'https://www.canadadry.com/#/root-of-relaxation',
-                        description: 'El equilibrio perfecto entre sabor, ligereza y sensación refrescante.'
+                        href: 'https://www.xcaret.com/es/parques-y-tours/',
+                        description: 'Si te gusta la aventura, no te puedes perder esto...'
                     }
                 }
             ];
@@ -125,7 +125,7 @@
             .modal .modal-content .modal-header .close {
               color: #aaa;
               float: right;
-              font-size: 28px;
+              font-size: 20px;
               font-weight: bold;
               font-family: Trebuchet MS;
             }
