--- a/Xcaret-VideoInteractivo/VideoInteractivo.html
+++ b/Xcaret-VideoInteractivo/VideoInteractivo.html
@@ -18,9 +18,9 @@
                         'left: 20px;',
                         'top: 30px;'
                     ],
-                    img_screen: 'https://i.imgur.com/BL2ue6I.png',
+                    img_screen: 'https://i.imgur.com/SVvjS4E.png',
                     detail: {//configuracion para el modal imagen, titulo, y texto de detail
-                        imageUrl: 'https://i.imgur.com/BL2ue6I.png',
+                        imageUrl: 'https://i.imgur.com/SVvjS4E.png',
                         title: ' ',
                         href: 'https://www.xcaret.com/es/parques-y-tours/',
                         description: '¡Haz de tu experiencia algo único con nuestros parques y tours!'
@@ -31,9 +31,9 @@
                         'left: 20px;',
                         'top: 110px;'
                     ],
-                    img_screen: 'https://i.imgur.com/1Znu1IX.png',
+                    img_screen: 'https://i.imgur.com/jHgmAfk.png',
                     detail: {
-                        imageUrl: 'https://i.imgur.com/1Znu1IX.png',
+                        imageUrl: 'https://i.imgur.com/jHgmAfk.png',
                         title: ' ',
                         href: 'https://www.xcaret.com/es/parques-y-tours/',
                         description: '¡Vive la experiencia Xcaret!'
@@ -44,9 +44,9 @@
                         'left: 30px;',
                         'top: 30px;'
                     ],
-                    img_screen: 'https://i.imgur.com/wd0NIWc.png',
+                    img_screen: 'https://i.imgur.com/VGJyFCY.png',
                     detail: {
-                        imageUrl: 'https://i.imgur.com/wd0NIWc.png',
+                        imageUrl: 'https://i.imgur.com/VGJyFCY.png',
                         title: ' ',
                         href: 'https://www.xcaret.com/es/parques-y-tours/',
                         description: 'Diversión, naturaleza y cultura para toda la familia.'
@@ -57,9 +57,9 @@
                         'left: 30px;',
                         'top: 120px;'
                     ],
-                    img_screen: 'https://i.imgur.com/VUcXaOL.png',
+                    img_screen: 'https://i.imgur.com/C74ojbv.png',
                     detail: {
-                        imageUrl: 'https://i.imgur.com/VUcXaOL.png',
+                        imageUrl: 'https://i.imgur.com/C74ojbv.png',
                         title: ' ',
                         href: 'https://www.xcaret.com/es/parques-y-tours/',
                         description: 'Si te gusta la aventura, no te puedes perder esto...'
