padding bottom discover

--- a/Xcaret-VideoInteractivo/VideoInteractivo.html
+++ b/Xcaret-VideoInteractivo/VideoInteractivo.html
@@ -168,6 +168,7 @@
                 text-decoration: none;
                 color: #333;
                 margin-top: -10px;
+                padding-bottom: 5px;
             }
         </style>
     </head>
