--- a/Juguetron/Cube.html
+++ b/Juguetron/Cube.html
@@ -509,10 +509,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 186px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(3px, 88px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(3px, 88px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(3px, 88px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(3px, 88px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -527,19 +527,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i224 { opacity: 1; }
 /*#/#*//*#i224.i225.positioning.css:positioning/base/css.2*/
 #i224 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 138px; height: 37px;
-        -ms-transform: translate(0, 0) translate(83px, 148px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(83px, 148px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(83px, 148px) rotate(0deg);
-        transform: translate(0, 0) translate(83px, 148px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(79px, 140px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(79px, 140px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(79px, 140px) rotate(0deg);
+        transform: translate(0, 0) translate(79px, 140px) rotate(0deg);
 }
 /*#/#*//*#i4.i296.image.css:image/base/css*/
 #i296 { opacity: 1; }
 /*#/#*//*#i296.i297.positioning.css:positioning/base/css.2*/
 #i296 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 40px; height: 39px;
-        -ms-transform: translate(0, 0) translate(254px, 208px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(254px, 208px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(254px, 208px) rotate(0deg);
-        transform: translate(0, 0) translate(254px, 208px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(255px, 208px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(255px, 208px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(255px, 208px) rotate(0deg);
+        transform: translate(0, 0) translate(255px, 208px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -555,28 +555,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i300 { opacity: 1; }
 /*#/#*//*#i300.i301.positioning.css:positioning/base/css.2*/
 #i300 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(13px, 222px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(13px, 222px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(13px, 222px) rotate(0deg);
-        transform: translate(0, 0) translate(13px, 222px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(10px, 222px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(10px, 222px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(10px, 222px) rotate(0deg);
+        transform: translate(0, 0) translate(10px, 222px) rotate(0deg);
 }
 /*#/#*//*#i4.i302.image.css:image/base/css*/
 #i302 { opacity: 1; }
 /*#/#*//*#i302.i303.positioning.css:positioning/base/css.2*/
 #i302 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(41px, 222px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(41px, 222px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(41px, 222px) rotate(0deg);
-        transform: translate(0, 0) translate(41px, 222px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(38px, 222px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(38px, 222px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(38px, 222px) rotate(0deg);
+        transform: translate(0, 0) translate(38px, 222px) rotate(0deg);
 }
 /*#/#*//*#i4.i304.image.css:image/base/css*/
 #i304 { opacity: 1; }
 /*#/#*//*#i304.i305.positioning.css:positioning/base/css.2*/
 #i304 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(68px, 222px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(68px, 222px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(68px, 222px) rotate(0deg);
-        transform: translate(0, 0) translate(68px, 222px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(66px, 222px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(66px, 222px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(66px, 222px) rotate(0deg);
+        transform: translate(0, 0) translate(66px, 222px) rotate(0deg);
 }
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
@@ -864,7 +864,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¡Encuéntranos en Insurgentes Sur 360!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/6TLVW35.png"/>
+<img id="i130" src="https://i.imgur.com/sT1gSKH.gif"/>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
 <img id="i224" src="https://i.imgur.com/sByWsfr.png"/>
 <!--#/#--><!--#i4.i296.image.html:image/html-->
