--- a/Juguetron/Venetian.html
+++ b/Juguetron/Venetian.html
@@ -2322,7 +2322,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/0Wqb2OI.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/HtsLhq9.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/K0Mc9Zt.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
@@ -2530,7 +2530,7 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: 0Wqb2OI.png; fileId: ; sourceTypeId: externalUrl;
+name: HtsLhq9.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: K0Mc9Zt.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
