--- a/Xcaret-VideoInteractivo/VideoInteractivo.html
+++ b/Xcaret-VideoInteractivo/VideoInteractivo.html
@@ -113,7 +113,7 @@
             .modal .modal-content {
               background-color: #fefefe;
               margin: 5% auto; /* 15% from the top and centered */
-              padding: 0px;
+              padding-bottom: 15px;
               border: 1px solid #888;
               width: 80%; /* Could be more or less, depending on screen size */
             }
@@ -163,11 +163,11 @@
                 margin-top: -15px;
             }
             .modal .modal-content .body .column .link a {
-                padding: 2px 2px;
-                background-color: transparent;
-                border: 1px solid #333;
+                padding: 2px 4px;
+                background-color: #828282;
+                border: 1px solid #fff;
                 text-decoration: none;
-                color: #333;
+                color: #fff;
                 margin-top: -10px;
                 padding-bottom: 5px;
             }
